[package]
name = "engineio-rs"
version = "0.1.0"
authors = ["kriw <kotarou777775@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

warp = "0.2"
tokio = { version = "0.2", features = ["full"]}
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
