[package]
name = "mini-server"
version = "0.1.0"
authors = ["kriw <kotarou777775@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

engineio-rs = { path = "../../" }
tokio = { version = "0.2", features = ["full"]}
